@@ -72,6 +72,7 @@ typedef struct __dc1394_capture
   uint8_t                  iso_is_started;
 
   uint32_t                 flags;
+  Boolean                  do_irm;
 
   dc1394video_frame_t     *frames;
 } dc1394capture_t;
